--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -343,7 +343,7 @@ template {
 
 @font-face {
   font-family: 'robotobold';
-  src: url("../fonts/roboto-bold-webfont.woff2") format("woff2"), url("../fonts/roboto-bold-webfont.woff") format("woff");
+  src: url("/assets/fonts/roboto-bold-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-bold-webfont.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: optional;
@@ -351,7 +351,7 @@ template {
 
 @font-face {
   font-family: 'robotoitalic';
-  src: url("../fonts/roboto-italic-webfont.woff2") format("woff2"), url("../fonts/roboto-italic-webfont.woff") format("woff");
+  src: url("/assets/fonts/roboto-italic-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-italic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: italic;
   font-display: optional;
@@ -359,7 +359,7 @@ template {
 
 @font-face {
   font-family: 'robotolight';
-  src: url("../fonts/roboto-light-webfont.woff2") format("woff2"), url("../fonts/roboto-light-webfont.woff") format("woff");
+  src: url("/assets/fonts/roboto-light-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-light-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: optional;
@@ -367,7 +367,7 @@ template {
 
 @font-face {
   font-family: 'robotomedium';
-  src: url("../fonts/roboto-medium-webfont.woff2") format("woff2"), url("../fonts/roboto-medium-webfont.woff") format("woff");
+  src: url("/assets/fonts/roboto-medium-webfont.woff2") format("woff2"), url("/assets/fonts/roboto-medium-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: optional;
@@ -418,11 +418,12 @@ ul {
 
 .container {
   margin: 0 auto;
-  width: 1460px;
+  max-width: 1170px;
 }
 
 .wrapper {
   overflow: hidden;
+  min-width: 1190px;
   min-height: 100%;
 }
 
@@ -436,5 +437,6 @@ ul {
   background-color: #1a1918;
   height: 345px;
   margin-top: -345px;
+  min-width: 1190px;
 }
 /*# sourceMappingURL=main.css.map */
