--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,19 +1,11 @@
-// // var
-$body-color:#fff;
-$footer-color:#1a1918;
-// цвет кноки
-$color-btn: #ff9d00;
-// цвет текста
-$color-text:#373737;
-// цвет заглавного цвета
-$color-title:#ff9d00;
-// цвет секции 
-$color-serction:#f4f4f4;
+// Подключение Базовых стилей
 
 @import '_misc/normalize';
+@import '_misc/colorvar';
 @import '_misc/mixnin';
 @import '_misc/fonts';
 @import '_misc/adjusment';
 
+// Подлючение основых стилей
 
 
