--- a/scss/_misc/_colorvar.scss
+++ b/scss/_misc/_colorvar.scss
@@ -1,12 +1,15 @@
-// // var
+ // var
 $body-color:#fff;
 
-$footer-color:#1a1918;
-// цвет кноки
-$color-btn: #ff9d00;
+// цвет верхней шапки
+
+$main-color:#05328d;
+
+// цвет футера
+$footer-color:#03215c;
+
 // цвет текста
-$color-text:#373737;
-// цвет заглавного цвета
-$color-title:#ff9d00;
-// цвет секции 
-$color-serction:#f4f4f4;
+
+
+// цвет кнопки
+
