--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,4 +439,89 @@ ul {
   margin-top: -293px;
   min-width: 1190px;
 }
+
+.header {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #f4f4f4;
+}
+
+.header__flex-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__left {
+  width: 50%;
+}
+
+.header__left-link {
+  font-size: 11px;
+  color: #7f7d7d;
+  font-family: 'robotoregular',Tohoma, sans-serif;
+}
+
+.header__rigth {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social__item--margin {
+  margin-right: 10px;
+}
+
+.social__link-fb {
+  width: 18px;
+  height: 26px;
+  display: block;
+  color: #a39f9f;
+}
+
+.social__link-instagram {
+  width: 26px;
+  height: 26px;
+  display: block;
+  color: #a39f9f;
+}
+
+.lang {
+  margin-left: 15px;
+}
+
+.lang__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+}
+
+.lang__link {
+  color: #7f7d7d;
+  font-size: 11px;
+  font-family: 'robotoregular',Tohoma, sans-serif;
+}
+
+.lang__color:hover {
+  color: #e3a900;
+  text-decoration: underline;
+}
+
+.lang__activ {
+  color: #e3a900;
+  text-decoration: underline;
+}
 /*# sourceMappingURL=main.css.map */
