--- a/scss/page/_header.scss
+++ b/scss/page/_header.scss
@@ -1,21 +1,21 @@
-.header {
+.top-line {
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: #f4f4f4;
 }
 
-.header__flex-container {
+.top-line__flex-container {
    display:flex;
 }
-.header__left {
+.top-line__left {
    width: 50%;
 }
-.header__left-link {
+.top-line__left-link {
    font-size: 11px;
    color: #7f7d7d;
    @include roboto(regular);   
 }
-.header__rigth {
+.top-line__rigth {
    display: flex;
    width: 50%;
    justify-content: flex-end;
