--- a/scss/page/_header.scss
+++ b/scss/page/_header.scss
@@ -60,3 +60,51 @@
    color: #e3a900;
    text-decoration: underline;
 }
+// разметка шапки 
+
+.header__bottom {
+   padding-top: 40px;
+   padding-bottom: 40px;
+   background: url('/assets/img/decor/bg__page-title.png');
+}
+
+.header__bottom-flex-container {
+   display: flex;
+   width: 100%;
+}
+
+.header__bottom-left {
+   display: flex;
+   
+}
+
+.address {
+   display: flex;
+}
+
+.adress__phone {
+   display: flex;
+}
+.adress__mail {
+   display: flex;
+}
+.log__pic {
+   width: 160px;
+   height: 106px;
+   display: block;
+}
+.phone-icon {
+   width: 11px;
+   height: 11px;
+   color: #006cb5;
+}
+.adress__phone-text,.adress__mail-text {
+   color: #4b4949;
+   font-size: 12px;
+   @include roboto(regular); 
+}
+.mail-icon {
+   color: #006cb5;
+   width: 14px;
+   height: 13px;
+}
