--- a/scss/page/_header.scss
+++ b/scss/page/_header.scss
@@ -108,3 +108,34 @@
    width: 14px;
    height: 13px;
 }
+.search-icon {
+   color: #006cb5;
+   width: 25px;
+   height: 22px;
+}
+.search {
+   position: relative;
+}
+.search__input {  
+   width: 466px;
+   padding-top: 15px;
+   padding-bottom: 15px;
+   border-radius: 10px;
+   padding-left: 10px;
+   padding-right: 70px;
+   border:2px solid #e5e7e9;
+   background-color: #f4f4f4;
+   outline: none;
+   font-size: 12px;
+   color: #7f7d7d;
+}
+.btn-search {
+   background: transparent;
+   border: none;
+   outline: none;
+   cursor: pointer;
+   position: absolute;
+   top: 50%;
+   margin-top: -10px;
+   right: 20px;
+}
