--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -536,6 +536,9 @@ ul {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__bottom-left {
@@ -554,12 +557,19 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 20px;
 }
 
 .adress__mail {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .log__pic {
@@ -572,6 +582,7 @@ ul {
   width: 11px;
   height: 11px;
   color: #006cb5;
+  margin-right: 4px;
 }
 
 .adress__phone-text, .adress__mail-text {
@@ -584,16 +595,12 @@ ul {
   color: #006cb5;
   width: 14px;
   height: 13px;
-}
-
-.search-icon {
-  color: #006cb5;
-  width: 25px;
-  height: 22px;
+  margin-right: 4px;
 }
 
 .search {
   position: relative;
+  margin-top: 5px;
 }
 
 .search__input {
@@ -617,7 +624,58 @@ ul {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  margin-top: -10px;
+  margin-top: -12px;
   right: 20px;
+}
+
+.search-icon {
+  color: #a39f9f;
+  width: 25px;
+  height: 22px;
+}
+
+.basket-service {
+  border: 2px solid #e5e7e9;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 6px;
+  position: relative;
+}
+
+.basket-service__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 14px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: #7f7e7e;
+  border-right: 2px solid #e5e7e9;
+  padding-right: 6px;
+}
+
+.basket-service__icon {
+  width: 51px;
+  height: 39px;
+  color: #05328d;
+}
+
+.basket-service__link:before {
+  content: attr(data-count);
+  display: block;
+  position: absolute;
+  top: -19px;
+  right: 16px;
+  width: 25px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  border-radius: 50%;
+  background: #e3a900;
+  color: #fff;
 }
 /*# sourceMappingURL=main.css.map */
