--- a/scss/page/_header.scss
+++ b/scss/page/_header.scss
@@ -71,6 +71,7 @@
 .header__bottom-flex-container {
    display: flex;
    width: 100%;
+   justify-content: space-between;
 }
 
 .header__bottom-left {
@@ -80,13 +81,17 @@
 
 .address {
    display: flex;
+   
 }
 
 .adress__phone {
    display: flex;
+   align-items: center;
+   margin-right: 20px;
 }
 .adress__mail {
    display: flex;
+   align-items: center;
 }
 .log__pic {
    width: 160px;
@@ -97,6 +102,7 @@
    width: 11px;
    height: 11px;
    color: #006cb5;
+   margin-right: 4px;
 }
 .adress__phone-text,.adress__mail-text {
    color: #4b4949;
@@ -107,14 +113,12 @@
    color: #006cb5;
    width: 14px;
    height: 13px;
+   margin-right: 4px;
 }
-.search-icon {
-   color: #006cb5;
-   width: 25px;
-   height: 22px;
-}
+
 .search {
    position: relative;
+   margin-top: 5px;
 }
 .search__input {  
    width: 466px;
@@ -136,6 +140,49 @@
    cursor: pointer;
    position: absolute;
    top: 50%;
-   margin-top: -10px;
+   margin-top: -12px;
    right: 20px;
+}
+.search-icon {
+   color: #a39f9f;
+   width: 25px;
+   height: 22px;   
+}
+// стилизация правого края
+
+.basket-service {
+   border: 2px solid #e5e7e9;
+   display: flex;
+   padding: 6px;
+   position: relative;
+}
+.basket-service__text {
+   display: flex;
+   align-items: center;
+   font-size: 14px;
+   @include roboto(bold);
+   color: #7f7e7e;
+   border-right: 2px solid #e5e7e9;
+   padding-right: 6px;
+}
+.basket-service__icon {
+   width: 51px;
+   height: 39px;
+   color: #05328d;
+} 
+
+.basket-service__link:before {
+   content: attr(data-count);
+   display: block;
+   position: absolute;
+   top: -19px;
+   right: 16px;
+   width: 25px;
+   height: 25px;
+   line-height: 25px;
+   text-align: center;
+   border-radius: 50%;
+   background: #e3a900;
+   color: #fff;
+
 }
