--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -539,12 +539,37 @@ ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.header__bottom-left {
+.logo-block {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.logo-text {
+  margin-left: 10px;
+}
+
+.logo-text__title {
+  font-size: 21px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: #006cb5;
+  line-height: 0.82;
+}
+
+.logo-text__subtitle {
+  font-size: 14px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: #006cb5;
 }
 
 .address {
@@ -639,8 +664,9 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 6px;
+  padding: 8px 15px;
   position: relative;
+  margin-top: 20px;
 }
 
 .basket-service__text {
@@ -656,6 +682,10 @@ ul {
   color: #7f7e7e;
   border-right: 2px solid #e5e7e9;
   padding-right: 6px;
+}
+
+.basket-service__pic {
+  margin-left: 6px;
 }
 
 .basket-service__icon {
