--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -587,6 +587,7 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   margin-right: 20px;
+  margin-left: 4px;
 }
 
 .adress__mail {
@@ -611,7 +612,7 @@ ul {
   margin-right: 4px;
 }
 
-.adress__phone-text, .adress__mail-text {
+.address_phone-link, .adress__mail-link {
   color: #4b4949;
   font-size: 12px;
   font-family: 'robotoregular',Tohoma, sans-serif;
@@ -708,5 +709,93 @@ ul {
   border-radius: 50%;
   background: #e3a900;
   color: #fff;
+}
+
+.nav {
+  background-color: #05328d;
+}
+
+.nav__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.nav__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-right: 1px solid  #fff;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__item:first-child {
+  border-left: 1px solid  #fff;
+}
+
+.nav__link {
+  color: white;
+  font-size: 20px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  text-align: center;
+  line-height: 2.90em;
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.nav__link:hover {
+  color: #e3a900;
+}
+
+.nav__animate {
+  position: relative;
+}
+
+.nav__animate::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: white;
+  -webkit-transform-origin: bottom right;
+      -ms-transform-origin: bottom right;
+          transform-origin: bottom right;
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  -o-transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
+}
+
+.nav__animate:hover::before {
+  -webkit-transform-origin: bottom left;
+      -ms-transform-origin: bottom left;
+          transform-origin: bottom left;
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+          transform: scaleX(1);
 }
 /*# sourceMappingURL=main.css.map */
