--- a/scss/page/_nav.scss
+++ b/scss/page/_nav.scss
@@ -24,7 +24,7 @@ justify-content: space-between;
    flex: 1;
    text-align: center;
    line-height: 2.90em;
-   transition: transform 0.5s;
+   transition: 500ms;
 }
 .nav__link:hover {
    color: #e3a900;
