--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -754,11 +754,9 @@ ul {
           flex: 1;
   text-align: center;
   line-height: 2.90em;
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  -o-transition: transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
 }
 
 .nav__link:hover {
