--- a/scss/page/_aside.scss
+++ b/scss/page/_aside.scss
@@ -1,2 +1,13 @@
 
 
+
+
+.sidbar__title {
+   background-color: #05328d;
+}
+
+.sidbar-title__icon {
+   width: 17px;
+   height: 17px;
+   color: white;
+}
