--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -713,6 +713,7 @@ ul {
 
 .nav {
   background-color: #05328d;
+  margin-bottom: 37px;
 }
 
 .nav__list {
@@ -803,6 +804,13 @@ ul {
 
 .sidbar__title {
   background-color: #05328d;
+  padding: 12px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .sidbar__text {
@@ -810,11 +818,37 @@ ul {
   font-family: 'robotobold', Tohoma, sans-serif;
   font-weight: bold;
   color: white;
+  margin-left: 9px;
 }
 
 .sidbar-title__icon {
   width: 17px;
   height: 17px;
   color: white;
+}
+
+.sidbar__item {
+  background: #f4f4f4;
+  padding: 12px 15px;
+}
+
+.sidbar__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sidbar-title__icon-caret {
+  width: 12px;
+  height: 18px;
+  color: #6f6a6a;
+}
+
+.sidbar--color {
+  color: #6f6a6a;
+  font-size: 15px;
 }
 /*# sourceMappingURL=main.css.map */
