--- a/scss/page/_aside.scss
+++ b/scss/page/_aside.scss
@@ -2,16 +2,17 @@
 
 .sidbar-block {
    width: 270px;
+   
 }
 
 .sidbar__title {
    background-color: #05328d;
-   padding: 12px 15px;
+   padding: 12px 14px;
    display: flex;
    align-items: center;
 }
 .sidbar__text {
-   font-size: 14px;
+   font-size: 17px;
    @include roboto(bold);
    color: white;
    margin-left: 9px;
@@ -21,9 +22,17 @@
    height: 17px;
    color: white;
 }
+.sidbar__nav {
+   margin-bottom: 49px;
+}
+.sidbar__list {
+ border-left: 1px solid #929292;  
+ border-right: 1px solid #929292;  
+}
 .sidbar__item {
    background: #f4f4f4;
-   padding: 12px 15px;
+   padding: 12px 14px;
+   border-bottom: 1px solid #929292; 
    
 }
 .sidbar__link {
@@ -37,7 +46,8 @@
 }
 .sidbar--color {
    color: #6f6a6a;
-   font-size: 15px;
+   font-size: 14px;
+   @include roboto(light);
 
 
 }
