--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -873,6 +873,10 @@ ul {
   font-weight: 300;
 }
 
+.slaider {
+  margin-bottom: 35px;
+}
+
 .slaider__wrapper {
   width: 875px;
   height: 317px;
@@ -894,5 +898,17 @@ ul {
   position: absolute;
   bottom: 50px;
   left: 54px;
+}
+
+.title-block {
+  border-bottom: 1px solid #929292;
+  margin-bottom: 15px;
+}
+
+.title {
+  color: #6f6a6a;
+  font-size: 30px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
 }
 /*# sourceMappingURL=main.css.map */
