--- a/scss/page/_aside.scss
+++ b/scss/page/_aside.scss
@@ -1,8 +1,7 @@
 
 
 .sidbar-block {
-   width: 270px;
-   
+   width: 23%;   
 }
 
 .sidbar__title {
@@ -48,6 +47,5 @@
    color: #6f6a6a;
    font-size: 14px;
    @include roboto(light);
-
 
 }
