--- a/scss/page/_new.scss
+++ b/scss/page/_new.scss
@@ -18,3 +18,38 @@
    color: #e3a900;   
 }
 // стилизация списка новостей 
+
+.new__item {
+   margin-bottom: 53px;
+   -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.06);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.06);
+    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.06);
+}
+
+.new__link {
+display: flex;
+}
+
+.new-desc__block {
+   padding: 20px;
+}
+.new__pic {
+   width: 364px;
+   height: 268px;
+   display: block;
+   object-fit: cover;
+}
+
+
+
+.new-desc__title {
+   color: #000;
+   font-size: 16px;
+   @include roboto(bold);
+   margin-bottom: 15px;
+}
+.new-desc__text {
+   font-size: 14px;
+   @include roboto(ligth);
+   color: #000;
+}
