--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1056,4 +1056,8 @@ ul {
   font-size: 14px;
   color: #e3a900;
 }
+
+.slaider-bottom {
+  margin-bottom: 50px;
+}
 /*# sourceMappingURL=main.css.map */
