--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -2,6 +2,7 @@
    padding-top: 49px;
    padding-bottom: 30px;
    display: flex;
+   justify-content: space-around;
    
 }
 .logo-dipservice {
@@ -38,4 +39,20 @@
 }
 .footer--text-subtitle-mid {
    color: #9a9b9b;
+}
+.footer-title {
+   font-size:20px;
+   color: white;
+   @include roboto(medium);
+}
+.footer-service__item {
+   border-bottom: 1px solid rgba(234, 234, 234, .1);
+   
+  padding: 10px 0;
+}
+.footer-service__text {
+   color: white;
+   @include roboto(medium);
+   font-size: 14px;
+  
 }
