--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1067,6 +1067,8 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .logo-dipservice {
@@ -1109,5 +1111,22 @@ ul {
 
 .footer--text-subtitle-mid {
   color: #9a9b9b;
+}
+
+.footer-title {
+  font-size: 20px;
+  color: white;
+  font-family: 'robotomedium',Tohoma,sans-serif;
+}
+
+.footer-service__item {
+  border-bottom: 1px solid rgba(234, 234, 234, 0.1);
+  padding: 10px 0;
+}
+
+.footer-service__text {
+  color: white;
+  font-family: 'robotomedium',Tohoma,sans-serif;
+  font-size: 14px;
 }
 /*# sourceMappingURL=main.css.map */
