--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1139,4 +1139,15 @@ ul {
   font-family: 'robotomedium',Tohoma,sans-serif;
   font-size: 14px;
 }
+
+.footer-bottom__text {
+  color: white;
+  font-size: 10px;
+}
+
+.footer-bottom {
+  padding-bottom: 15px;
+  padding-top: 15px;
+  background-color: #04183e;
+}
 /*# sourceMappingURL=main.css.map */
