--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -65,3 +65,12 @@
    font-size: 14px;
   
 }
+.footer-bottom__text {
+   color: white;
+   font-size: 10px;
+}
+.footer-bottom {
+   padding-bottom: 15px;
+   padding-top: 15px;
+   background-color: #04183e;
+}
