--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1127,6 +1127,7 @@ ul {
   font-size: 20px;
   color: white;
   font-family: 'robotomedium',Tohoma,sans-serif;
+  margin-bottom: 15px;
 }
 
 .footer-service__item {
