--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -2,8 +2,8 @@
    width: 25%;
    margin-right: 10px;
 }
-.footer__rigth:last-child{
-   margin-right: none;
+.footer__right:last-child{
+   margin-right: 0;
 }
 
 .footer__wrap {
