--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1066,8 +1066,8 @@ ul {
   margin-right: 10px;
 }
 
-.footer__rigth:last-child {
-  margin-right: none;
+.footer__right:last-child {
+  margin-right: 0;
 }
 
 .footer__wrap {
