конец стилизации подвала

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1151,4 +1151,34 @@ ul {
   padding-top: 15px;
   background-color: #04183e;
 }
+
+.footer-icons__marker {
+  width: 15px;
+  height: 19px;
+  color: white;
+  margin-right: 3px;
+}
+
+.footer-service__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-icons__telephone {
+  width: 15px;
+  height: 19px;
+  color: white;
+  margin-right: 3px;
+}
+
+.footer-icons__mail {
+  width: 15px;
+  height: 19px;
+  color: white;
+  margin-right: 3px;
+}
 /*# sourceMappingURL=main.css.map */
