--- a/scss/page/_footer.scss
+++ b/scss/page/_footer.scss
@@ -75,3 +75,26 @@
    padding-top: 15px;
    background-color: #04183e;
 }
+.footer-icons__marker {
+   width: 15px;
+   height: 19px;
+   color: white;
+   margin-right: 3px;
+}
+.footer-service__link {
+   display: flex;
+   align-items: center;
+}
+.footer-icons__telephone {
+   width: 15px;
+   height: 19px; 
+   color: white;
+   margin-right: 3px;
+}
+
+.footer-icons__mail {
+   width: 15px;
+   height: 19px; 
+   color: white;
+   margin-right: 3px;
+}
