--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,8 @@
 @import '_misc/mixnin';
 @import '_misc/fonts';
 @import '_misc/adjusment';
+@import 'page/slick-theme';
+@import 'page/slick';
 
 // Подлючение основых стилей
 
