--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1150,33 +1150,6 @@ ul {
   font-weight: 300;
 }
 
-.slaider {
-  margin-bottom: 35px;
-}
-
-.slaider__wrapper {
-  width: 875px;
-  height: 317px;
-  position: relative;
-}
-
-.slaider__pic {
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-.slaider__title {
-  font-size: 36px;
-  font-family: 'robotobold', Tohoma, sans-serif;
-  font-weight: bold;
-  color: white;
-  position: absolute;
-  bottom: 50px;
-  left: 54px;
-}
-
 .title-block {
   border-bottom: 1px solid #929292;
   margin-bottom: 15px;
@@ -1453,5 +1426,41 @@ ul {
   height: 19px;
   color: white;
   margin-right: 3px;
+}
+
+.slaider {
+  margin-bottom: 35px;
+}
+
+.slaider__wrapper {
+  width: 875px;
+  height: 317px;
+  position: relative;
+}
+
+.slaider__pic {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slaider__title {
+  font-size: 36px;
+  font-family: 'robotobold', Tohoma, sans-serif;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  bottom: 50px;
+  left: 54px;
+}
+
+.slick-prev {
+  left: 10px;
+  z-index: 5;
+}
+
+.slick-next {
+  right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
