--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -498,7 +498,7 @@ ul {
 .slick-prev:before,
 .slick-next:before {
   font-family: "slick";
-  font-size: 20px;
+  font-size: 25px;
   line-height: 1;
   color: white;
   opacity: 0.75;
@@ -599,14 +599,14 @@ ul {
   font-size: 6px;
   line-height: 20px;
   text-align: center;
-  color: black;
+  color: #05328d;
   opacity: 0.25;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 .slick-dots li.slick-active button:before {
-  color: black;
+  color: #05328d;
   opacity: 0.75;
 }
 
@@ -1307,6 +1307,18 @@ ul {
   margin-bottom: 50px;
 }
 
+.slaider-bottom__pic {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.slaider-bottom__block {
+  width: 880px;
+  height: 161px;
+}
+
 .footer__left, .footer__middle, .footer__middle-double, .footer__right {
   width: 25%;
   margin-right: 10px;
@@ -1461,6 +1473,18 @@ ul {
 }
 
 .slick-next {
-  right: 10px;
+  right: 13px;
+}
+
+.slick-dots {
+  bottom: -30px;
+}
+
+.slick-dots li button:before {
+  font-size: 14px;
+}
+
+.slick-dots li button:before {
+  color: #05328d;
 }
 /*# sourceMappingURL=main.css.map */
