--- a/scss/page/_slaider-bottom.scss
+++ b/scss/page/_slaider-bottom.scss
@@ -1,3 +1,12 @@
 .slaider-bottom {
    margin-bottom: 50px;
 }
+.slaider-bottom__pic {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+.slaider-bottom__block {
+   width: 880px;
+   height: 161px;
+}
