--- a/scss/page/_slick-theme.scss
+++ b/scss/page/_slick-theme.scss
@@ -11,7 +11,7 @@ $slick-font-path: "/assets/libs/slick/fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
 $slick-arrow-color: white !default;
-$slick-dot-color: black !default;
+$slick-dot-color: #05328d !default;
 $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
@@ -91,7 +91,7 @@ $slick-opacity-not-active: 0.25 !default;
     }
     &:before {
         font-family: $slick-font-family;
-        font-size: 20px;
+        font-size: 25px;
         line-height: 1;
         color: $slick-arrow-color;
         opacity: $slick-opacity-default;
