--- a/scss/page/_media.scss
+++ b/scss/page/_media.scss
@@ -2,11 +2,51 @@
 }
 @media screen and (max-width: 992px){
 
+
+
+
+.logo-block {
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+.logo {
+  margin-bottom: 10px;
+}
+.log__pic {
+  width: 143px;
+  height: 94px;
+  }
+  .logo-text__title {
+    font-size: 18px;
+  }
+  .logo-text__subtitle {
+    font-size: 10px;
+  }
+.header__bottom-midlle, .header__bottom-rigth {
+  align-self: center;
+}
+.basket-service__text {
+  text-align: center;
+}
 // конец стилей медия
 }
 @media screen and (max-width: 768px){
+.logo-block {
+  display: none;
+}
 
+.header__bottom-midlle {
+flex-grow: 1;
+}
 
+.basket-service__text {
+  display: none;
+}
+.basket-service__pic {
+  margin-left: 0;
+}
 // конец стилей медия
 }
 
