медия шапки сайта

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1504,6 +1504,10 @@ ul {
 }
 
 @media screen and (max-width: 992px) {
+  .header__bottom {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
   .logo-block {
     -webkit-box-align: center;
         -ms-flex-align: center;
