--- a/scss/page/_media.scss
+++ b/scss/page/_media.scss
@@ -2,7 +2,10 @@
 }
 @media screen and (max-width: 992px){
 
-
+  .header__bottom {
+    padding-top: 20px;
+    padding-bottom: 20px; 
+  }
 
 
 .logo-block {
