шапка и слайдер под 375px и меньше

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1183,23 +1183,25 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .catalog__item {
-  margin-left: 29px;
+  -ms-flex-preferred-size: 1 1 auto;
+      flex-basis: 1 1 auto;
   margin-bottom: 40px;
 }
 
-.catalog__item:nth-child(3n+1) {
-  margin-left: 0;
+.catalog__link {
+  max-width: 273px;
+  height: 250px;
+  display: block;
 }
 
 .catalog__pic {
-  width: 273px;
-  height: 250px;
+  width: 100%;
+  height: 100%;
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
@@ -1614,6 +1616,29 @@ ul {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .address {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .adress__phone {
+    margin: 0;
+  }
+  .slaider__title {
+    font-size: 22px;
+    bottom: 45px;
+    left: 15px;
+  }
+  .slaider__wrapper {
+    height: 190px;
   }
 }
 /*# sourceMappingURL=main.css.map */
