--- a/scss/page/_catalog.scss
+++ b/scss/page/_catalog.scss
@@ -14,19 +14,26 @@ margin-bottom: 15px;
 .catalog__list {
    display: flex;
    flex-wrap: wrap;
-   justify-content: flex-start;
+   justify-content: space-around;
 }
 .catalog__item {
-   margin-left: 29px;
+   flex-basis: 1 1 auto;
+   
    margin-bottom: 40px;
+   
 }
 
 .catalog__item:nth-child(3n+1){
-   margin-left: 0;
+ 
+}
+.catalog__link {
+   max-width: 273px;
+   height: 250px;
+   display: block;
 }
 .catalog__pic {
-   width: 273px;
-   height: 250px;
+   width: 100%;
+   height: 100%;
    display: block;
    object-fit: cover;
    margin-bottom: 15px;
