--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1188,15 +1188,11 @@ ul {
 }
 
 .catalog__item {
-  -ms-flex-preferred-size: 1 1 auto;
-      flex-basis: 1 1 auto;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 30%;
+          flex: 1 1 30%;
+  margin-left: 10px;
   margin-bottom: 40px;
-}
-
-.catalog__link {
-  max-width: 273px;
-  height: 250px;
-  display: block;
 }
 
 .catalog__pic {
@@ -1620,6 +1616,9 @@ ul {
 }
 
 @media screen and (max-width: 375px) {
+  .header__bottom-rigth {
+    display: none;
+  }
   .address {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
