--- a/scss/page/_catalog.scss
+++ b/scss/page/_catalog.scss
@@ -16,6 +16,10 @@ margin-bottom: 15px;
    flex-wrap: wrap;
    justify-content: space-around;
 }
+.catalog__desc {
+   // max-width: 273px;
+   // max-height: 250px;
+}
 .catalog__item {
    flex: 1 1 30%;
    margin-left: 10px;
