--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1196,11 +1196,8 @@ ul {
 }
 
 .catalog__pic {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
   display: block;
-  -o-object-fit: cover;
-     object-fit: cover;
   margin-bottom: 15px;
 }
 
@@ -1569,7 +1566,7 @@ ul {
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 576px) {
   .top-line {
     display: none;
   }
@@ -1585,6 +1582,14 @@ ul {
   }
   .slaider__wrapper {
     height: 250px;
+  }
+  .catalog__item {
+    max-width: 300px;
+  }
+  .slaider__title {
+    font-size: 25px;
+    bottom: 40px;
+    left: 21px;
   }
   .title-block {
     display: -webkit-box;
@@ -1638,6 +1643,9 @@ ul {
   }
   .slaider__wrapper {
     height: 190px;
+  }
+  .catalog__item {
+    max-width: 230px;
   }
 }
 /*# sourceMappingURL=main.css.map */
