--- a/scss/page/_catalog.scss
+++ b/scss/page/_catalog.scss
@@ -36,10 +36,10 @@ margin-bottom: 15px;
    
 }
 .catalog__pic {
-   width: 100%;
-   height: 100%;
+   max-width: 100%;
+ 
    display: block;
-   object-fit: cover;
+   // object-fit: cover;
    margin-bottom: 15px;
    // max-width: 273px;
    // height: 250px
