--- a/scss/page/_catalog.scss
+++ b/scss/page/_catalog.scss
@@ -1,6 +1,6 @@
 .title-block {
-border-bottom: 1px solid #929292;
-margin-bottom: 15px;
+   border-bottom: 1px solid #929292;
+   margin-bottom: 15px;
 }
 
 .title {
@@ -16,10 +16,11 @@ margin-bottom: 15px;
    flex-wrap: wrap;
    justify-content: space-around;
 }
-.catalog__desc {
-   // max-width: 273px;
-   // max-height: 250px;
-}
+
+// .catalog__desc {
+//    max-width: 273px;
+//    max-height: 250px;
+// }
 .catalog__item {
    flex: 1 1 30%;
    margin-left: 10px;
@@ -27,17 +28,16 @@ margin-bottom: 15px;
    // max-width: 273px;
 }
 
-.catalog__item:nth-child(3n+1){
- 
-}
-.catalog__link {
-   // max-width: 273px;
-   // max-height: 250px;
-   
-}
+// .catalog__item:nth-child(3n+1){
+
+// }
+// .catalog__link {
+//    max-width: 273px;
+//    max-height: 250px;
+
+// }
 .catalog__pic {
    max-width: 100%;
- 
    display: block;
    // object-fit: cover;
    margin-bottom: 15px;
@@ -46,7 +46,7 @@ margin-bottom: 15px;
 }
 
 .catalog__text {
-font-size: 18px;
-color: #6f6a6a;
-@include roboto(medium);
+   font-size: 18px;
+   color: #6f6a6a;
+   @include roboto(medium);
 }
